# hanko-admin-ui

./: .gitignore  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mise.toml  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  provider.rs  session.rs
src/api/: client.ts  endpoints.ts  providers.ts  types.ts
src/components/: ConnectionGuard.tsx  ErrorBoundary.tsx  Layout.tsx  QueryBoundary.tsx  QueryError.tsx  Sensitive.tsx  TablePagination.tsx
src/context/: ConnectionContext.tsx  PrivacyContext.tsx
src/lib/: ui.ts
src/pages/: AuditLogs.tsx  Connect.tsx  Dashboard.tsx  Metrics.tsx  UserDetail.tsx  Users.tsx  Webhooks.tsx
src/pages/user-detail/: EmailsTab.tsx  MetadataTab.tsx  OtpTab.tsx  OverviewTab.tsx  PasswordTab.tsx  SessionsTab.tsx  WebAuthnTab.tsx
src/pages/users/: CreateUserModal.tsx
