[package]
name = "hanko-admin"
version = "0.1.1" # x-release-please-version
description = "Hanko Admin — desktop console for administering a Hanko installation"
authors = ["mpecan"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mpecan/hanko-admin-ui"
# Explicit allowlist so the vendored `frontend/` (gitignored) is packaged into
# the published crate, making `cargo install hanko-admin` a fully usable app.
include = [
    "/src/**",
    "/build.rs",
    "/tauri.conf.json",
    "/capabilities/**",
    "/icons/**",
    "/frontend/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hanko_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
zeroize = "1"
tokio = { version = "1", features = ["process", "time", "rt"] }
base64 = "0.22"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

